# effect-browser

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
automation/: autobuild.prompt.md  install-scheduled-task.ps1  run-autobuild.ps1
docs/: AUTONOMOUS_ROADMAP.md  JOB_APPLICATION_HARNESS.md  OPERATIONS.md  OUTGOING_REQUEST_REVIEW.md  REACTIVE_EVALUATION.md  RESEARCH.md  SCRAPLING_RESEARCH.md  SPEC.md
src/effect_browser/: __init__.py  api.py  cli.py  config.py  demo_target.py  domain.py  engine.py  job_target.py  mcp_server.py  policy.py  store.py  transmission.py  uploads.py
src/effect_browser/browser/: __init__.py  base.py  playwright.py  snapshot.py
src/effect_browser/providers/: __init__.py  base.py  deterministic.py  http.py  job_harness.py  reactive.py
src/effect_browser/web/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_browser_e2e.py  test_config.py  test_engine.py  test_job_harness_e2e.py  test_playwright_driver.py  test_policy.py  test_profiles.py  test_providers.py  test_reactive_browser_e2e.py  test_reactive_provider.py  test_snapshot.py  test_store_migrations.py  test_transmission.py  test_uploads.py
