[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effect-browser"
version = "0.2.0"
description = "Crash-safe browser operations with approval-bound external effects."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "prathamesh-git9" }]
keywords = ["browser-automation", "agents", "durable-execution", "playwright"]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "playwright==1.61.0",
  "prometheus-client>=0.21",
  "pydantic>=2.9",
  "pydantic-settings>=2.8",
  "scrapling==0.4.11",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
postgres = ["psycopg[binary]>=3.2", "alembic>=1.14"]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]

[project.scripts]
effect-browser = "effect_browser.cli:app"

[project.urls]
Homepage = "https://github.com/prathamesh-git9/effect-browser"
Issues = "https://github.com/prathamesh-git9/effect-browser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/effect_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
markers = ["e2e: real browser and HTTP boundary test"]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]
